--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "emailjs-com": "^3.2.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
